--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,133 @@
-body {
-  margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+body{
+  margin: 0px;
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+.main{
+  display: grid;
+  grid-template-columns: 1px 200px auto 25px;
+  grid-template-rows: 25px 100px auto 25px;
+}
+
+header{
+  grid-column: 3/4;
+  grid-row: 1/2;
+  text-align: center;
+}
+
+
+.Navbar{
+  grid-column: 2/3;
+  grid-row: 3/4;
+  width: 200px;
+}
+
+
+.Navbar ul{
+    
+    padding-left: 0px;
+    justify-content: center;
+}
+
+.Navbar li{
+  text-align: center;
+  list-style-type: none;
+  margin: 10px;
+  
+  border-radius: 5%;
+  padding: 0px;
+
+}
+.Navbar a{
+  text-decoration: none;
+  color: white;
+  width: 100px;
+  padding: 20px;
+  background-color: rgb(0, 0, 255);
+  display: inline-block;
+  
+}
+
+.Content{
+  grid-column: 3/4;
+  grid-row: 3/4;
+  margin-left: 20px;
+}
+h1{
+  padding-top: 25px;
+}
+
+h2{
+  text-align: center;
+  
+
+}
+h3{
+  text-align: center;
+  margin-bottom: 0px;
+}
+
+p{
+  text-align: center;
+  margin-top: 5px;
+  margin-bottom: 20px;
+  
+}
+
+.content{
+  display: flex;
+  justify-content: center;
+  flex-direction: column;
+  
+}
+
+
+@media screen and (max-width: 500px) {
+    .main{
+        display: grid;
+        grid-template-columns:  auto auto auto auto;
+        grid-template-rows: 10px 80px auto auto 10px auto;
+      }
+
+      .Navbar{
+        grid-column: 1/5;
+        grid-row: 3/4;
+        
+        justify-content: center;
+        
+      }
+      .Navbar ul{
+          display: flex;
+          justify-content: center;
+          flex-direction: row;
+          flex-wrap: wrap;
+          justify-content: center;
+      }
+
+      .Navbar li{
+        margin: 2px;
+      }
+
+      .Navbar a{
+          text-decoration: none;
+          color: white;
+          padding: 5px;
+          
+          width: auto;
+          
+        }
+        .Content{
+          grid-column: 3/4;
+          grid-row: 4/5;
+          margin-left: 20px;
+        }
+
+        header{
+          grid-column: 3/4;
+          grid-row: 1/2;
+          text-align: center;
+        }
+
+        h1{
+           padding-top: 0px;
+          }
 }
