--- a/src/index.css
+++ b/src/index.css
@@ -42,6 +42,7 @@ header{
   color: white;
   width: 100px;
   padding: 20px;
+  border-radius: 5%;
   background-color: rgb(0, 0, 255);
   display: inline-block;
   
@@ -58,7 +59,7 @@ h1{
 
 h2{
   text-align: center;
-  
+  margin-bottom: 0px;
 
 }
 h3{
@@ -68,7 +69,7 @@ h3{
 
 p{
   text-align: center;
-  margin-top: 5px;
+  margin-top: 0px;
   margin-bottom: 20px;
   
 }
