--- a/src/index.css
+++ b/src/index.css
@@ -51,7 +51,7 @@ header{
 .Content{
   grid-column: 3/4;
   grid-row: 3/4;
-  margin-left: 20px;
+ 
 }
 h1{
   padding-top: 25px;
@@ -60,6 +60,7 @@ h1{
 h2{
   text-align: center;
   margin-bottom: 0px;
+  text-decoration:underline;
 
 }
 h3{
@@ -78,6 +79,8 @@ p{
   display: flex;
   justify-content: center;
   flex-direction: column;
+  margin-left: 30px;
+  margin-right: 30px;
   
 }
 
@@ -85,27 +88,29 @@ p{
 @media screen and (max-width: 500px) {
     .main{
         display: grid;
-        grid-template-columns:  auto auto auto auto;
-        grid-template-rows: 10px 80px auto auto 10px auto;
+        grid-template-columns:   auto ;
+        grid-template-rows:  auto auto auto;
       }
 
       .Navbar{
         grid-column: 1/5;
-        grid-row: 3/4;
+        grid-row: 2/3;
+        display: flex;
         
-        justify-content: center;
+        flex-direction: row;
+        flex-wrap: wrap;
         
       }
       .Navbar ul{
-          display: flex;
-          justify-content: center;
-          flex-direction: row;
-          flex-wrap: wrap;
-          justify-content: center;
+          
+          
+
+          
       }
 
       .Navbar li{
         margin: 2px;
+        
       }
 
       .Navbar a{
@@ -117,13 +122,14 @@ p{
           
         }
         .Content{
-          grid-column: 3/4;
-          grid-row: 4/5;
-          margin-left: 20px;
+          grid-column: 1/2;
+          grid-row: 3/4;
+          margin-left: 30px;
+          margin-right: 30px;
         }
 
         header{
-          grid-column: 3/4;
+          grid-column: 1/2;
           grid-row: 1/2;
           text-align: center;
         }
