--- a/src/index.css
+++ b/src/index.css
@@ -12,6 +12,7 @@ header{
   grid-column: 3/4;
   grid-row: 1/2;
   text-align: center;
+  
 }
 
 
@@ -46,6 +47,10 @@ header{
   background-color: rgb(0, 0, 255);
   display: inline-block;
   
+}
+
+.Navbar  a:hover{
+  box-shadow: 0 0 0 1px rgb(0 0 0 / 100%);
 }
 
 .Content{
@@ -84,6 +89,16 @@ p{
   
 }
 
+.img1{
+  
+  margin-top: 100px;
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
+  width: 50%;
+  box-shadow: 4px 4px 4px 4px rgb(0 0 0 / 70%);
+  border-radius: 5%;
+}
 
 @media screen and (max-width: 500px) {
     .main{
@@ -93,31 +108,31 @@ p{
       }
 
       .Navbar{
-        grid-column: 1/5;
+        grid-column: 1/2;
         grid-row: 2/3;
-        display: flex;
+        width: 100%;
         
-        flex-direction: row;
-        flex-wrap: wrap;
         
       }
-      .Navbar ul{
-          
-          
-
-          
-      }
+    
 
       .Navbar li{
         margin: 2px;
         
       }
 
+      .Navbar ul{
+        display: flex;
+        
+        flex-direction: row;
+        flex-wrap: wrap;
+      }
+
       .Navbar a{
           text-decoration: none;
           color: white;
           padding: 5px;
-          
+
           width: auto;
           
         }
