--- a/src/index.css
+++ b/src/index.css
@@ -58,6 +58,17 @@ header{
   box-shadow: 0 0 0 1px rgb(0 0 0 / 100%);
 }
 
+.img1{
+  
+  margin-top: 100px;
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
+  width: 50%;
+  border-right: 4px solid black;
+  border-top: 4px solid black
+  
+}
 .Content{
   grid-column: 3/4;
   grid-row: 3/4;
