--- a/src/index.css
+++ b/src/index.css
@@ -18,7 +18,11 @@ header{
 }
 .main-content{
   border-right: 2px solid black;
-  border-top: 2px solid black
+  border-top: 2px solid black;
+  margin-left: auto;
+  margin-right: auto;
+  width: 70%;
+
 }
 
 .Navbar{
@@ -47,7 +51,7 @@ header{
   text-decoration: none;
   color: white;
   width: 100px;
-  padding: 20px;
+  padding: 10px;
   border-radius: 5%;
   background-color: rgb(0, 0, 0);
   display: inline-block;
@@ -80,7 +84,7 @@ h1{
 
 h2{
   text-align: center;
-  margin-bottom: 0px;
+  margin-bottom: 2px;
   text-decoration:underline;
 
 }
@@ -178,6 +182,7 @@ p{
 
         h1{
            padding-top: 0px;
+           
           }
 
           .main-content{
@@ -188,5 +193,17 @@ p{
           grid-column: 1/2;
           grid-row: 4/5;
           display: flex;
+        }
+
+        .img1{
+  
+          margin-top: 100px;
+          display: block;
+          margin-left: auto;
+          margin-right: auto;
+          width: 80%;
+          border-right: 4px solid black;
+          border-top: 4px solid black
+          
         }
 }
