--- a/src/index.css
+++ b/src/index.css
@@ -6,7 +6,7 @@ body{
 
 .main{
   display: grid;
-  grid-template-columns: 1px 200px auto 25px;
+  grid-template-columns: 25px 200px auto 25px;
   grid-template-rows: 25px 100px auto 25px;
 }
 
@@ -18,7 +18,10 @@ header{
 }
 .main-content{
   border-right: 2px solid black;
-  border-top: 2px solid black
+  border-top: 2px solid black;
+  margin-left: auto;
+  margin-right: auto;
+  width: 75%;
 }
 
 .Navbar{
@@ -47,7 +50,7 @@ header{
   text-decoration: none;
   color: white;
   width: 100px;
-  padding: 20px;
+  padding: 10px;
   border-radius: 5%;
   background-color: rgb(0, 0, 0);
   display: inline-block;
@@ -80,7 +83,7 @@ h1{
 
 h2{
   text-align: center;
-  margin-bottom: 0px;
+  margin-bottom: 10px;
   text-decoration:underline;
 
 }
@@ -92,7 +95,7 @@ h3{
 p{
   text-align: center;
   margin-top: 0px;
-  margin-bottom: 20px;
+  margin-bottom: 0px;
   
 }
 
