--- a/src/index.css
+++ b/src/index.css
@@ -1,20 +1,20 @@
 body{
   margin: 0px;
-  background: rgb(2,0,36);
-  background: linear-gradient(90deg, rgba(2,0,36,1) 0%, rgba(255,255,255,1) 0%, rgba(0,212,255,0.4458158263305322) 100%);
+  background: rgb(255, 255, 255);
+  /* background: linear-gradient(90deg, rgba(2,0,36,1) 0%, rgba(255,255,255,1) 0%, rgba(0,212,255,0.4458158263305322) 100%); */
 }
 
 .main{
   display: grid;
-  grid-template-columns: 25px 200px auto 25px;
+  grid-template-columns: 25px auto 25px;
   grid-template-rows: 25px 100px auto 25px;
 }
 
 header{
-  grid-column: 3/4;
+  grid-column: 2/3;
   grid-row: 1/2;
   text-align: center;
-  
+
 }
 .main-content{
   border-right: 2px solid black;
@@ -22,6 +22,8 @@ header{
   margin-left: auto;
   margin-right: auto;
   width: 70%;
+  grid-column: 2/3;
+  grid-row: 3/4;
 
 }
 
@@ -33,7 +35,7 @@ header{
 
 
 .Navbar ul{
-    
+
     padding-left: 0px;
     justify-content: center;
 }
@@ -42,7 +44,6 @@ header{
   text-align: center;
   list-style-type: none;
   margin: 10px;
-  
   border-radius: 5%;
   padding: 0px;
 
@@ -55,32 +56,43 @@ header{
   border-radius: 5%;
   background-color: rgb(0, 0, 0);
   display: inline-block;
-  
+
 }
+
 
 .Navbar  a:hover{
   box-shadow: 0 0 0 1px rgb(0 0 0 / 100%);
 }
 
+li{
+  text-align: none;
+}
+
+ul{
+  list-style-type: none;
+}
+
 .img1{
-  
+
   margin-top: 100px;
   display: block;
   margin-left: auto;
   margin-right: auto;
   width: 50%;
   border-right: 4px solid black;
-  border-top: 4px solid black
-  
+  border-top: 4px solid black;
+  grid-column: 3/4;
+  grid-row: 3/4;
+
 }
 .Content{
   grid-column: 3/4;
   grid-row: 3/4;
- 
+
 }
 h1{
   padding-top: 25px;
-  
+
 }
 
 h2{
@@ -98,7 +110,7 @@ p{
   text-align: center;
   margin-top: 0px;
   margin-bottom: 10px;
-  
+
 }
 
 .content{
@@ -107,7 +119,7 @@ p{
   flex-direction: column;
   margin-left: 30px;
   margin-right: 30px;
-  
+
 }
 
 
@@ -118,9 +130,9 @@ p{
   width: 100%;
   grid-column: 2/3;
   grid-row: 4/5;
-  
+
   text-align: center;
-  
+
 }
 .kontaktInfo h3{
   margin-top: 30px;
@@ -130,12 +142,14 @@ p{
   margin: 0px;
 }
 
-
+.my-pic{
+  grid-column: 2/3;
+}
 
 @media screen and (max-width: 500px) {
     .main{
         display: grid;
-        grid-template-columns:   auto ;
+        grid-template-columns: 10px auto  10px;
         grid-template-rows:  auto auto auto;
       }
 
@@ -143,19 +157,19 @@ p{
         grid-column: 1/2;
         grid-row: 2/3;
         width: 100%;
-        
-        
+
+
       }
-    
+
 
       .Navbar li{
         margin: 2px;
-        
+
       }
 
       .Navbar ul{
         display: flex;
-        
+
         flex-direction: row;
         flex-wrap: wrap;
       }
@@ -166,7 +180,7 @@ p{
           padding: 5px;
 
           width: auto;
-          
+
         }
         .Content{
           grid-column: 1/2;
@@ -175,16 +189,16 @@ p{
           margin-right: 30px;
         }
 
-        header{
-          grid-column: 1/2;
-          grid-row: 1/2;
-          text-align: center;
-        }
+
 
         h1{
            padding-top: 0px;
-           
+
           }
+
+        .Sidebar-content{
+          margin-left: 0px;
+        }
 
           .main-content{
             border-right: none;
@@ -197,7 +211,7 @@ p{
         }
 
         .img1{
-  
+
           margin-top: 100px;
           display: block;
           margin-left: auto;
@@ -205,6 +219,6 @@ p{
           width: 80%;
           border-right: 4px solid black;
           border-top: 4px solid black
-          
+
         }
 }
