--- a/src/Components/NavBar/NavBar-Style.css
+++ b/src/Components/NavBar/NavBar-Style.css
@@ -32,7 +32,7 @@
     padding: 5px 5px 5px 5px;
     border-radius: 20px;
     background-color: rgb(0, 166, 255);
-    
+    box-shadow: 2px 2px 10px;
     text-align: center;
     
 
