--- a/src/index.css
+++ b/src/index.css
@@ -113,6 +113,14 @@ p{
 
 }
 
+.mail{
+  
+  text-align: center;
+  margin-top: 0px;
+  margin-bottom: 10px;
+
+}
+
 .content{
   display: flex;
   justify-content: center;
