--- a/src/Components/NavBar/NavBar-Style.css
+++ b/src/Components/NavBar/NavBar-Style.css
@@ -10,7 +10,7 @@
 
 .navbar-list-item a{
     text-decoration: none;
-    color: white;
+    color: rgb(0, 0, 0);
     display: block;
 }   
 
@@ -31,7 +31,7 @@
     margin-bottom: 20px;
     padding: 5px 5px 5px 5px;
     border-radius: 20px;
-    background-color: rgb(0, 166, 255);
+    background-color: rgb(255, 255, 255);
     box-shadow: 2px 2px 10px;
     text-align: center;
     
