--- a/src/index.css
+++ b/src/index.css
@@ -40,6 +40,32 @@ body {
   width: var(--container-width-1g);
   margin: 0 auto;
 }
+.text-container {
+  background-color: #7373d1;
+  display: flex;
+  margin: auto;
+  justify-content: center;
+  box-shadow: 0 4px 8px 0 rgba(255, 255, 255, 0.2),
+    0 6px 20px 0 rgba(255, 255, 255, 0.19);
+  height: 40%;
+  width: 40%;
+  border: 2px solid rgb(255, 255, 255);
+  border-radius: 5px;
+}
+
+nav {
+  color: var(--color-primary-variant);
+  position: fixed;
+  bottom: 20px;
+  display: flex;
+  justify-content: center;
+  width: 100%;
+}
+
+nav a {
+  padding: 10px 15px 10px 15px;
+  color: var(--color-white);
+}
 
 h1,
 h2,
@@ -48,11 +74,49 @@ h4,
 h5 {
   font-weight: 500;
 }
-
+.nav-container {
+  background-color: #1f1f38;
+  padding: 2px 10px 2px 10px;
+  border: 1px solid #ccc !important;
+}
+#contact {
+  /* padding-top: 8rem; */
+  padding-bottom: 8rem;
+}
 .main {
-  display: grid;
+  /* display: grid;
   grid-template-columns: 25px auto 25px;
-  grid-template-rows: 25px 100px auto 25px;
+  grid-template-rows: 25px 100px auto 25px; */
+  flex-direction: column;
+}
+
+.hover-icon1,
+.hover-icon2,
+.hover-icon3,
+.hover-icon4,
+.hover-icon5 {
+  visibility: hidden;
+  text-align: center;
+  border-radius: 6px;
+  bottom: 40px;
+  z-index: 1;
+  position: absolute;
+}
+
+.nav-icon1:hover .hover-icon1 {
+  visibility: visible;
+}
+.nav-icon2:hover .hover-icon2 {
+  visibility: visible;
+}
+.nav-icon3:hover .hover-icon3 {
+  visibility: visible;
+}
+.nav-icon4:hover .hover-icon4 {
+  visibility: visible;
+}
+.nav-icon5:hover .hover-icon5 {
+  visibility: visible;
 }
 
 header {
@@ -60,6 +124,21 @@ header {
   grid-row: 1/2;
   text-align: center;
 }
+
+section {
+  height: 100vh;
+}
+
+section > h2 {
+  color: var(--color-white);
+}
+
+section > h2,
+section > h5 {
+  text-align: center;
+  color: var(--color-light);
+}
+
 .main-content {
   border-right: 2px solid black;
   border-top: 2px solid black;
