--- a/src/index.css
+++ b/src/index.css
@@ -41,16 +41,24 @@ body {
   margin: 0 auto;
 }
 .text-container {
-  background-color: #7373d1;
   display: flex;
-  margin: auto;
-  justify-content: center;
+  flex-direction: column;
+  align-items: flex-start;
+  flex-wrap: wrap;
+  /* background-color: var(--color-bg-variant);
   box-shadow: 0 4px 8px 0 rgba(255, 255, 255, 0.2),
-    0 6px 20px 0 rgba(255, 255, 255, 0.19);
-  height: 40%;
-  width: 40%;
-  border: 2px solid rgb(255, 255, 255);
-  border-radius: 5px;
+    0 6px 20px 0 rgba(255, 255, 255, 0.19); */
+  padding: 1.5rem;
+  /* border: 2px solid rgb(255, 255, 255);
+  border-radius: 5px; */
+  margin-top: 3rem;
+  max-width: 70%;
+}
+
+section {
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
 
 nav {
@@ -77,7 +85,7 @@ h5 {
 .nav-container {
   background-color: #1f1f38;
   padding: 2px 10px 2px 10px;
-  border: 1px solid #ccc !important;
+  /* border: 1px solid #ccc !important; */
 }
 #contact {
   /* padding-top: 8rem; */
@@ -211,7 +219,6 @@ h1 {
 h2 {
   text-align: center;
   margin-bottom: 5px;
-  text-decoration: underline;
 }
 h3 {
   text-align: center;
