--- a/src/index.css
+++ b/src/index.css
@@ -59,7 +59,7 @@ body {
   padding: 2rem;
   /* border: 2px solid rgb(255, 255, 255);
   border-radius: 5px; */
-  margin-top: 3rem;
+  
   width: 50%;
 }
 .picture-container {
@@ -104,7 +104,7 @@ h5 {
   font-weight: 500;
 }
 .nav-container {
-  background-color: #1f1f38;
+  background-color: transparent;
   padding: 2px 10px 2px 10px;
   /* border: 1px solid #ccc !important; */
 }
@@ -146,8 +146,6 @@ h5 {
 }
 
 header {
-  grid-column: 2/3;
-  grid-row: 1/2;
   text-align: center;
 }
 
@@ -230,9 +228,7 @@ ul {
   grid-column: 3/4;
   grid-row: 3/4;
 }
-h1 {
-  padding-top: 25px;
-}
+
 
 h2 {
   margin-bottom: 0px;
