--- a/src/index.css
+++ b/src/index.css
@@ -48,6 +48,7 @@ body {
   margin: 0 auto;
 }
 .text-container {
+  margin-left: 15rem;
   display: flex;
   flex-direction: column;
   align-items: flex-start;
@@ -63,6 +64,7 @@ body {
   width: 50%;
 }
 .picture-container {
+  margin-right: 15rem;
   width: 50%;
 }
 a:link {
@@ -284,9 +286,11 @@ p {
 @media screen and (max-width: 500px) {
 
   .text-container {
+    margin-left: 2rem;
     width: 100%;
   }
   .picture-container {
+    margin-right: 2rem;
     width: 0%;
   }
 
